# HW_27_r

./: README.md  db.sqlite3  manage.py  pyproject.toml
HW_27_r/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  urls.py  views.py
ads/migrations/: 0001_initial.py
ads/views/: ad.py  category.py
data/: ads.json  csv_to_json.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py
